--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Verdana", "Geneva", sans-serif;
+  font-family: monospace, "Verdana", "Geneva", sans-serif;
   font-size: 10pt;
   color: #333;
 }
