--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,13 @@
-.App {
-  text-align: left;
+.app {
+  width: 100%;
+  max-width: 768px;
+  margin: 0px auto;
+  color: #333;
+  background-color: #f0f0f0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 768px) {
+  .app {
+    margin: 0px auto;
   }
 }
