--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
-body {
-  margin: 0;
+* {
   padding: 0;
-  font-family: monospace, "Verdana", "Geneva", sans-serif;
-  font-size: 10pt;
-  color: #333;
+  margin: 0;
+}
+html {
+  background-color: white;
+  height: 100%;
+}
+body {
+  position: relative;
+  height: 100%;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
 }
