--- a/src/components/story/Stories.css
+++ b/src/components/story/Stories.css
@@ -12,7 +12,7 @@
     /* padding: 2.5em 0.5em; */
     box-sizing: border-box;
     font-weight: 400;
-    border-bottom: 1px dashed rgba(0,0,0,0.1);
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
 }
 
 .stories .storyLink:link {
@@ -40,9 +40,11 @@
     font-weight: 300;
     color: #333;
 }
+
 .stories .storyDetails span {
     white-space: nowrap;
 }
+
 .stories .storyIndex {
     display: inline-block;
     width: 2em;
